2002-04-17	Patrik Torstensson <patrik.torstensson@labs2.com>

	* icall.c: added all new string internal calls
	* string-icalls.c: added, new string internal call implementation.
	* object.c: added mono_string_new_size for allocating a string a size

2002-04-17  Dietmar Maurer  <dietmar@ximian.com>

	* object.c (mono_object_isinst): use the same code as in the
	optimized x86 version.

Wed Apr 17 14:14:36 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* profiler.c: TSC-based timer code (faster and more accurate).
	Not hooked up in configure, yet (set USE_X86TSC to 1).

Wed Apr 17 12:33:10 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* profiler.c, profiler.h: track time spent compiling methods.
	* threads.c: track thread creation/destruction.

Tue Apr 16 20:08:43 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* profiler.c, profiler.h, profiler-private.h: profiling interface
	and sample implementation. Moved here so that it can be used also by
	the jit.

Tue Apr 16 12:58:12 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* reflection.c, reflection.h: keep types and other handles separate in
	the hash tables for referred tokens. Add guid for modules.

Mon Apr 15 11:37:33 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* assembly.c: fix bugs found with valgrind.
	* metadata.h, metadata.c: added mono_metadata_guid_heap().

2002-04-14	Patrik Torstensson <patrik.torstensson@labs2.com>

	* threads: added icall support for getting current domain for
	           the thread.
 
2002-04-13  Martin Baulig  <martin@gnome.org>

	* debug-symfile.h (MonoDebugLocalInfo): Renamed to MonoDebugVarInfo.
	(MonoDebugVarInfo): Added `index' field for register based addresses.
	(MONO_DEBUG_SYMBOL_FILE_VERSION): Increased to 9.
	(MonoDebugMethodInfo): Replaced `guint32 *param_offsets' with
	`MonoDebugVarInfo *params' and `guint32 this_offset' with
	`MonoDebugVarInfo *this_var'.

	* debug-symfile.c (relocate_variable): New static function to write